# realbrain

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: ideas.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml
.github/workflows/: ci.yml  safety-scan.yml
docs/: ARCHITECTURE.md  AUTOMATED_REVIEW_PROMPT.md  BLOG_POST_AGENT_MEMORY.md  COMMUNITY_OUTREACH.md  LAUNCH_COPY.md  LAUNCH_PLAYBOOK.md  LAUNCH_POSTING_QUEUE.md  LLM_IMPLEMENTATION_GUIDE.md  MAINTAINER_AUTOMATION.md  ROADMAP.md  SECURITY_AND_PRIVACY.md
examples/: demo.py  openclaw_tool_bridge_example.py
realbrain/: __init__.py  cognitive_loop.py  compat.py  dream_engine.py  gbrain_adapter.py  global_workspace.py  models.py  obsidian_adapter.py  store.py
realbrain_server/: tools.py
scripts/: security_scan.py
tests/: test_adapters.py  test_cognitive_loop.py  test_dream_workspace.py  test_models_store.py  test_synapse_confidence_unittest.py  test_unittest_smoke.py
